--- a/package.json
+++ b/package.json
@@ -2,21 +2,29 @@
   "name": "koishi-plugin-inf-verifier",
   "description": "test",
   "version": "0.0.1",
+  "contributors": [                         
+    "lingran7031"
+  ],
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
     "lib",
     "dist"
   ],
-  "license": "MIT",
-  "scripts": {},
+  "license": "MIT",                        
+  "homepage": "https://example.com",     
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lingran7031/inf-verifier.git"
+  }, 
   "keywords": [
     "chatbot",
     "koishi",
     "plugin"
   ],
-  "devDependencies": {},
   "peerDependencies": {
-    "koishi": "^4.18.7"
+    "koishi": "^4.18.7",
+    "mysql2": "^3.14.3"
   }
+  
 }
