--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-inf-verifier",
   "description": "基于mysql数据库的游戏ID入群自动验证的koishi插件",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "contributors": [                         
     "lingran7031"
   ],
@@ -22,6 +22,12 @@
     "koishi",
     "plugin"
   ],
+  "koishi": {
+        "description": { 
+      "en": "Game ID-Based Auto Verification for Group Entry – Koishi + MySQL",
+      "zh": "基于mysql数据库的游戏ID入群自动验证的koishi插件"
+    }
+  },
   "peerDependencies": {
     "koishi": "^4.18.7",
     "mysql2": "^3.14.3"
